--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="We tryn some shit for degen price. Use your $DYNMT to take your gangers' look to the next level."
     />
+    <meta property="og:image" content="https://degengang.xyz/static/media/banner.png"/>
+    <meta property="og:image:type" content="image/jpeg" >
+    <meta property="og:image:width" content="1000" >
+    <meta property="og:image:height" content="1000" >
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Degen Gang</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
