--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
       name="description"
       content="We tryn some shit for degen price. Use your $DYNMT to take your gangers' look to the next level."
     />
-    <meta property="og:image" content="https://degengang.xyz/static/media/banner.png"/>
+    <meta property="og:image" content="https://i.hizliresim.com/2sfwges.png"/>
     <meta property="og:image:type" content="image/jpeg" >
-    <meta property="og:image:width" content="1000" >
-    <meta property="og:image:height" content="1000" >
+    <meta property="og:image:width" content="400" >
+    <meta property="og:image:height" content="300" >
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
