--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="We tryn some shit for degen price. Use your $DYNMT to take your gangers' look to the next level."
+      content="Use your $OMD token to design your Deer in our trait market. By degens for degens! 0.09 Mint."
     />
     <meta property="og:image" content="https://i.hizliresim.com/2sfwges.png"/>
     <meta property="og:image:type" content="image/jpeg" >
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Degen Gang</title>
+    <title>Oh My Deer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
